--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^6.3.1",
+    "@shadcn/ui": "^0.0.4",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "bcrypt": "^5.1.1",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.15.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
@@ -43,7 +47,7 @@
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^5.14.0",
+    "prisma": "^6.3.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.5.3"
   },
